--- a/RetinaNet.ipynb
+++ b/RetinaNet.ipynb
@@ -85,6 +85,15 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://github.com/srihari-humbarwadi/datasets/releases/download/v0.1.0/data.zip\n",
+      "560529408/560525318 [==============================] - 146s 0us/step\n",
+      "560537600/560525318 [==============================] - 146s 0us/step\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Kevin\\\\Documents\\\\University\\\\SIN_Sistemas_Inteligentes\\\\Unit3\\\\ObjectDetection\\\\Assignment4_ObjectDetection\\\\data.zip'"
@@ -1327,7 +1336,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x22c3837a6d0>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x1b1d82bbd00>"
       ]
      },
      "execution_count": 25,
@@ -1385,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%% code\n"
@@ -1567,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1680,10 +1689,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22c7fedd640>"
+       "<matplotlib.image.AxesImage at 0x1b19107b760>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1717,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1747,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
